@@ -710,6 +710,9 @@ initpycurl(void)
     insint_c(d, "NEW_DIRECTORY_PERMS", CURLOPT_NEW_DIRECTORY_PERMS);
     insint_c(d, "POST301", CURLOPT_POST301);
     insint_c(d, "PROXY_TRANSFER_MODE", CURLOPT_PROXY_TRANSFER_MODE);
+#if LIBCURL_VERSION_NUM >= 0x072b00 /* check for 7.43.0 or greater */
+    insint_c(d, "PROXY_SERVICE_NAME", CURLOPT_PROXY_SERVICE_NAME);
+#endif
     insint_c(d, "COPYPOSTFIELDS", CURLOPT_COPYPOSTFIELDS);
     insint_c(d, "SSH_HOST_PUBLIC_KEY_MD5", CURLOPT_SSH_HOST_PUBLIC_KEY_MD5);
     insint_c(d, "AUTOREFERER", CURLOPT_AUTOREFERER);
