@@ -184,3 +184,9 @@ class OptionConstantsTest(unittest.TestCase):
         curl = pycurl.Curl()
         curl.setopt(curl.SSL_VERIFYSTATUS, True)
         curl.close()
+    
+    @util.min_libcurl(7, 43, 0)
+    def test_proxy_service_name(self):
+        curl = pycurl.Curl()
+        curl.setopt(curl.PROXY_SERVICE_NAME, 'fakehttp')
+        curl.close()
